data/forge_javadoc/1.9.4/raw/net/minecraft/item/ItemArmor.ArmorMaterial.md
---
title: "ItemArmor.ArmorMaterial"
description: "public static enum ItemArmor.ArmorMaterial extends java.lang.Enum<ItemArmor.ArmorMaterial>"
package: "net/minecraft/item"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/item/ItemArmor.ArmorMaterial.html"
sourceType: javadoc
---

# ItemArmor.ArmorMaterial

**Inheritance:** java.lang.Object → java.lang.Enum<ItemArmor.ArmorMaterial> → net.minecraft.item.ItemArmor.ArmorMaterial

## Class signature

```java
public static enum ItemArmor.ArmorMaterial extends java.lang.Enum<ItemArmor.ArmorMaterial>
```

## Methods

- `int getDamageReductionAmount(EntityEquipmentSlot armorType)`
- `int getDurability(EntityEquipmentSlot armorType)`
- `int getEnchantability()`
- `java.lang.String getName()`
- `Item getRepairItem()`
- `SoundEvent getSoundEvent()`
- `float getToughness()`
- `static ItemArmor.ArmorMaterial valueOf(java.lang.String name)` — Returns the enum constant of this type with the specified name.
- `static ItemArmor.ArmorMaterial [] values()` — Returns an array containing the constants of this enum type, in the order they are declared.

## Fields

- `Item customCraftingMaterial`
